--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -54,7 +54,7 @@ bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, exec, wofi --conf $HOME/.config/hypr/component/wofi/config --style $HOME/.config/hypr/component/wofi/style.css
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
